Fixe banner overlap project

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     justify-content: center;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 .banner > h1 {
     font-size: 5rem;
